--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Interactive card details form</title>
   </head>
   <body>
-    0000 0000 0000 0000 Jane Appleseed 00/00 000 Cardholder Name e.g. Jane Appleseed Card Number e.g. 1234 5678 9123 0000 Exp. Date (MM/YY)
-    MM YY CVC e.g. 123 Confirm
-
-    <!-- Completed state start -->
-
-    Thank you! We've added your card details Continue
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
